Fix emoji character overlaping image on RTL

--- a/packages/rocketchat-emojione/sprites.css
+++ b/packages/rocketchat-emojione/sprites.css
@@ -1,4 +1,5 @@
 .emojione {
+  text-align: left;
   text-indent: -9999em;
   image-rendering: optimizeQuality;
   font-size: inherit;
